--- a/package.json
+++ b/package.json
@@ -1,5 +1,8 @@
 {
   "name": "web",
   "private": true,
-  "dependencies": {}
+  "dependencies": {
+    "bootstrap": "^3.3.7",
+    "font-awesome": "^4.7.0"
+  }
 }
