--- a/package.json
+++ b/package.json
@@ -2,7 +2,8 @@
   "name": "web",
   "private": true,
   "dependencies": {
-    "bootstrap": "^3.3.7"
+    "bootstrap": "^3.3.7",
+    "jquery": "^3.2.1"
   },
   "engines": {
     "node": "^6.9",
