Add flexslider and welcome image

--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "private": true,
   "dependencies": {
     "bootstrap": "^3.3.7",
+    "flexslider": "^2.6.3",
     "jquery": "^3.2.1"
   },
   "engines": {
