--- a/package.json
+++ b/package.json
@@ -3,7 +3,9 @@
   "private": true,
   "dependencies": {
     "bootstrap": "^3.3.7",
-    "jquery": "^3.2.1"
+    "eonasdan-bootstrap-datetimepicker": "^4.17.47",
+    "jquery": "^3.2.1",
+    "moment": "^2.18.1"
   },
   "engines": {
     "node": "^6.9",
