--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "web",
   "private": true,
   "dependencies": {
-    "bootstrap": "^3.3.7",
+    "bootstrap-sass": "^3.3.7",
     "eonasdan-bootstrap-datetimepicker": "^4.17.47",
     "jquery": "^3.2.1",
     "moment": "^2.18.1"
