Update optional names

--- a/spec/config/mongoid.yml
+++ b/spec/config/mongoid.yml
@@ -1,7 +1,7 @@
 test:
   clients:
     default:
-      database: web_test
+      database: syosset_test
       hosts:
         - localhost:27017
       options:
