--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "dependencies": {
     "bootstrap-sass": "^3.3.7",
     "eonasdan-bootstrap-datetimepicker": "^4.17.47",
+    "fontawesome-iconpicker": "^1.3.0",
     "jquery": "^3.2.1",
     "moment": "^2.18.1"
   },
