--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "vendor/plugins/nhs"]
 	path = vendor/plugins/nhs
-	url = git@github.com:Syosset/syosset-plugins-NHS
+	url = https://github.com/Syosset/syosset-plugins-NHS.git
