--- a/package.json
+++ b/package.json
@@ -6,8 +6,7 @@
     "eonasdan-bootstrap-datetimepicker": "^4.17.47",
     "fontawesome-iconpicker": "^1.3.0",
     "jquery": "^3.2.1",
-    "moment": "^2.18.1",
-    "parallax-js": "^3.1.0"
+    "moment": "^2.18.1"
   },
   "engines": {
     "node": "^6.9",
