--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "eonasdan-bootstrap-datetimepicker": "^4.17.47",
     "fontawesome-iconpicker": "^1.3.0",
     "jquery": "^3.2.1",
-    "moment": "^2.18.1"
+    "moment": "^2.18.1",
+    "simplemde": "^1.11.2"
   },
   "engines": {
     "node": "^6.9",
