--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "bootstrap-sass": "^3.3.7",
     "eonasdan-bootstrap-datetimepicker": "^4.17.47",
     "fontawesome-iconpicker": "^1.3.0",
+    "inline-attachment": "^2.0.3",
     "jquery": "^3.2.1",
     "moment": "^2.18.1",
     "simplemde": "^1.11.2"
