--- a/config/cable.yml
+++ b/config/cable.yml
@@ -4,6 +4,11 @@ development:
 test:
   adapter: async
 
+staging:
+  adapter: redis
+  url: <%= ENV["REDIS_URL"] %>
+  channel_prefix: syosset_staging
+
 production:
   adapter: redis
   url: redis://localhost:6379/1
