--- a/app.json
+++ b/app.json
@@ -43,11 +43,11 @@
   "formation": {
     "web": {
       "quantity": 1,
-      "size": "Standard-1X"
+      "size": "free"
     },
     "worker": {
       "quantity": 1,
-      "size": "Standard-1X"
+      "size": "free"
     }
   },
   "addons": [
