--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "dependencies": {
     "bootstrap-sass": "^3.3.7",
     "eonasdan-bootstrap-datetimepicker": "^4.17.47",
+    "font-awesome": "^4.7.0",
     "fontawesome-iconpicker": "^1.3.1",
     "inline-attachment": "^2.0.3",
     "jquery": "^3.3.1",
