--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "fontawesome-iconpicker": "^1.3.1",
     "inline-attachment": "^2.0.3",
     "jquery": "^3.3.1",
+    "jquery-tags-input": "^1.3.5",
     "moment": "^2.20.1",
     "simplemde": "^1.11.2"
   },
