--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "name": "syosset",
   "private": true,
   "dependencies": {
-    "bootstrap-sass": "^3.3.7",
+    "@fortawesome/fontawesome-free": "^5.3.1",
+    "bootstrap": "^4.1.3",
     "eonasdan-bootstrap-datetimepicker": "^4.17.47",
-    "font-awesome": "^4.7.0",
     "fontawesome-iconpicker": "^1.4.1",
     "inline-attachment": "^2.0.3",
     "jquery": "^3.3.1",
